# src/routes/specification.routes.ts
@@ -1,10 +1,10 @@
 import { Router } from 'express';
-import { createSpecificationController } from '../modules/cars/usecase/createSpecification';
+import { CreateSpecificationController } from '../modules/cars/usecase/createSpecification/createSpecificationController';
 
 const specificationsRoutes = Router();
 
-specificationsRoutes.post('/', (request, response) => {
-    return createSpecificationController.handle(request, response);
-});
+const createSpecificationController = new CreateSpecificationController();
+
+specificationsRoutes.post('/', createSpecificationController.handle);
 
 export { specificationsRoutes };
